Downgrade from Java 17 to 11 (Oops)